added and styled upper part left bar

--- a/Day3/index.html
+++ b/Day3/index.html
@@ -18,46 +18,52 @@
 		<div class="task-manager">
 			<!-- left bar starts -->
 			<div class="left-bar">
-            <!-- left content starts -->
-			<div class="left-content">
-				<ul class="actions-list">
-					<li class="item">
-                        <i class="fa-solid fa-inbox"></i>
-                        <span>Inbox</span>
-					</li>
-                    <li class="item">
-                        <i class="fa-solid fa-star"></i>
-                        <span>Today</span>
-					</li>
-                    <li class="item">
-                        <i class="fa-solid fa-calendar-days"></i>
-                        <span>Upcoming</span>
-					</li>
-                    <li class="item">
-                        <i class="fa-solid fa-hashtag"></i>
-                        <span>Important</span>
-					</li>
-                    <li class="item">
-                        <i class="fa-solid fa-users"></i>
-                        <span>Meetings</span>
-					</li>
-                    <li class="item">
-                        <i class="fa-solid fa-trash"></i>
-                        <span>Trash</span>
-					</li>
-				</ul>
-                <ul class="category-list">
-                    <li class="item">
-                        <i class="fa-solid fa-house-chimney-window"></i>
-                        <span>Family</span>
-					</li>
-                    <li class="item">
-                        <i class="fa-solid fa-mountain-sun"></i>
-                        <span>Vacation</span>
-					</li>
-                </ul>
-			</div>
-			<!-- left content ends -->
+                <div class="upper-part">
+                    <div class="actions">
+                        <div class="circle"></div>
+                        <div class="circle-2"></div>
+                    </div>
+                </div>
+                <!-- left content starts -->
+                <div class="left-content">
+                    <ul class="actions-list">
+                        <li class="item">
+                            <i class="fa-solid fa-inbox"></i>
+                            <span>Inbox</span>
+                        </li>
+                        <li class="item">
+                            <i class="fa-solid fa-star"></i>
+                            <span>Today</span>
+                        </li>
+                        <li class="item">
+                            <i class="fa-solid fa-calendar-days"></i>
+                            <span>Upcoming</span>
+                        </li>
+                        <li class="item">
+                            <i class="fa-solid fa-hashtag"></i>
+                            <span>Important</span>
+                        </li>
+                        <li class="item">
+                            <i class="fa-solid fa-users"></i>
+                            <span>Meetings</span>
+                        </li>
+                        <li class="item">
+                            <i class="fa-solid fa-trash"></i>
+                            <span>Trash</span>
+                        </li>
+                    </ul>
+                    <ul class="category-list">
+                        <li class="item">
+                            <i class="fa-solid fa-house-chimney-window"></i>
+                            <span>Family</span>
+                        </li>
+                        <li class="item">
+                            <i class="fa-solid fa-mountain-sun"></i>
+                            <span>Vacation</span>
+                        </li>
+                    </ul>
+                </div>
+			    <!-- left content ends -->
 			</div>
 			<!-- left bar ends -->
 		</div>
