--- a/Day3/index.html
+++ b/Day3/index.html
@@ -66,6 +66,133 @@
 			    <!-- left content ends -->
 			</div>
 			<!-- left bar ends -->
+            <!-- page content starts -->
+            <div class="page-content">
+                <div class="header">Today Tasks</div>
+                <!-- content categories starts -->
+                <div class="content-categories">
+                    <div class="label-wrapper">
+                        <input type="radio" name="nav" id="opt-1" class="nav-item">
+                        <label for="opt-1" class="category">All</label>
+                    </div>
+                    <div class="label-wrapper">
+                        <input type="radio" name="nav" id="opt-2" class="nav-item">
+                        <label for="opt-2" class="category">Important</label>
+                    </div>
+                    <div class="label-wrapper">
+                        <input type="radio" name="nav" id="opt-3" class="nav-item">
+                        <label for="opt-3" class="category">Notes</label>
+                    </div>
+                    <div class="label-wrapper">
+                        <input type="radio" name="nav" id="opt-4" class="nav-item">
+                        <label for="opt-4" class="category">Links</label>
+                    </div>
+                </div>
+                <!-- tasks wrapper starts -->
+                <div class="task-wrapper">
+                    <div class="task">
+                        <input type="checkbox" name="task" id="item-1" class="task-item" checked>
+                        <label for="item-1">
+                            <span class="label-text">Dashboard Design Implementation</span>
+                        </label>
+                        <span class="tag approved">Approved</span>
+                    </div>
+                    <div class="task">
+                        <input type="checkbox" name="task" id="item-2" class="task-item">
+                        <label for="item-2">
+                            <span class="label-text">Create a userflow</span>
+                        </label>
+                        <span class="tag progress">In Progress</span>
+                    </div>
+                    <div class="task">
+                        <input type="checkbox" name="task" id="item-3" class="task-item">
+                        <label for="item-3">
+                            <span class="label-text">Application Implementation</span>
+                        </label>
+                        <span class="tag review">In Review</span>
+                    </div>
+                    <div class="task">
+                        <input type="checkbox" name="task" id="item-4" class="task-item">
+                        <label for="item-4">
+                            <span class="label-text">Create a Dashboard Design</span>
+                        </label>
+                        <span class="tag progress">In Progress</span>
+                    </div>
+                    <div class="task">
+                        <input type="checkbox" name="task" id="item-5" class="task-item" checked>
+                        <label for="item-5">
+                            <span class="label-text">Create a Web Application Design</span>
+                        </label>
+                        <span class="tag approved">Approved</span>
+                    </div>
+                    <div class="task">
+                        <input type="checkbox" name="task" id="item-6" class="task-item">
+                        <label for="item-6">
+                            <span class="label-text">Interactive Design</span>
+                        </label>
+                        <span class="tag review">In Review</span>
+                    </div>
+                    <div class="header upcoming">Upcoming Tasks</div>
+                    <div class="task">
+                        <input type="checkbox" name="task" id="item-7" class="task-item" disabled>
+                        <label for="item-7">
+                            <span class="label-text">Dashboard Design Implementation</span>
+                        </label>
+                        <span class="tag waiting">Waiting</span>
+                    </div>
+                    <div class="task">
+                        <input type="checkbox" name="task" id="item-8" class="task-item" disabled>
+                        <label for="item-8">
+                            <span class="label-text">Create a userflow</span>
+                        </label>
+                        <span class="tag waiting">Waiting</span>
+                    </div>
+                    <div class="task">
+                        <input type="checkbox" name="task" id="item-9" class="task-item" disabled>
+                        <label for="item-9">
+                            <span class="label-text">Application Implementation</span>
+                        </label>
+                        <span class="tag waiting">Waiting</span>
+                    </div>
+                </div>
+            </div>
+            <!-- page content ends -->
+            <!-- right bar starts -->
+            <div class="right-bar">
+                <div class="top-part">
+                    <i class="fa-solid fa-user-group"></i>
+                    <div class="count">6</div>
+                </div>
+                <div class="header">Schedule</div>
+                <div class="right-content">
+                    <div class="task-box yellow">
+                        <div class="description-task">
+                            <div class="time">08:00 - 09:00 AM</div>
+                            <div class="task-name">Product Review</div>
+                        </div>
+                        <div class="more-button"></div>
+                        <div class="members">
+                            <img src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="">
+                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="">
+                            <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="">
+                        </div>
+                    </div>
+                    <div class="task-box blue">
+                        <div class="description-task">
+                            <div class="time">10:00 - 11:00 AM</div>
+                            <div class="task-name">Design Meeting</div>
+                        </div>
+                        <div class="more-button"></div>
+                        <div class="members">
+                            <img src="https://images.unsplash.com/photo-1499887142886-791eca5918cd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="">
+                            <img src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="">
+                            <img src="https://images.unsplash.com/photo-1570295999919-56ceb5ecca61?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="">
+                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- right bar ends -->
 		</div>
 	</body>
 </html>
